<resources>
    <string name="app_name">Movies</string>
    <string name="app_Id">ca-app-pub-9629683741377335~9890178839</string>
    <string name="banner_ad_unit_id">ca-app-pub-9629683741377335/2974846651</string>
    <string name="native_ad_unit_id">ca-app-pub-9629683741377335/2476153207</string>
    <string name="inters_image_ad_unit_id">ca-app-pub-9629683741377335/7018901351</string>
    <string name="inters_video_ad_unit_id">ca-app-pub-9629683741377335/7011501800</string>
    <string name="create_account">Create an account</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="username">Email</string>
    <string name="name">Name</string>
    <string name="config_password">Config Password</string>
    <string name="forget_password">Forget Password</string>
    <string name="register">Register</string>
    <string name="haveaaccount">Have an acount</string>
    <string name="todo">TODO</string>
    <string name="message">Search</string>
    <string name="movie_theater">Movie theater</string>
    <string name="odd_films">Odd movies</string>
    <string name="cartoon_films">Cartoon Movies</string>
    <string name="views">Views</string>
    <string name="likes">Likes</string>
    <string name="birth">Date of Birth</string>
    <string name="country">Country</string>
    <string name="job">Job</string>
    <string name="job_two">Job:</string>
    <string name="shareName">sharedName</string>
    <string name="rated">You already rated this movie</string>
    <string name="rated_cinema">You already rated this cinema</string>
    <string name="facebook_app_id">354471625377449</string>
    <string name="fb_login_protocol_scheme">fb354471625377449</string>
    <!--    <string name="default_web_client_id">297683613269-ui77a58qmf1pkpphndi9fteau1r8ergo.apps.googleusercontent.com</string>-->
    <string name="request">Send Request</string>
    <string name="send_successfully">Sent successfully, please check your email</string>
    <string name="send_feed_back_successfully">Send Feedback Successful</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="client_id">297683613269-klmgthoanfjdumurk786at2qbicaqk8m.apps.googleusercontent.com</string>

    <string name="menu_home">Home</string>
    <string name="kind">Kind</string>
    <string name="account">Account</string>
    <string name="settings">Settings</string>
    <string name="saved">Save</string>
    <string name="book_mark">Bookmark</string>
    <string name="log_out">Sign out</string>
    <string name="search_not">There are currently no movies</string>
    <string name="not_have_cast">There are currently no casts by your keywords</string>
    <string name="sign_out">Sign out</string>
    <string name="ms_sign_out">Do you really want to sign out ?</string>
    <string name="strOk">OK</string>
    <string name="strCancel">Cancel</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ms_exit_app">Do you want to exit the application ?</string>
    <string name="notification">Notification</string>
    <string name="favorite">Favorite</string>
    <string name="lock_pass">Lock Password</string>
    <string name="config_lock_pass">Config Lock Password</string>
    <string name="old_lock_pass">Current Lock Password</string>
    <string name="current_pass_hint">Current Password</string>
    <string name="curent_pass_error">The current password is incorrect</string>
    <string name="length_pass_error">Character lock password must be more than 6 characters</string>
    <string name="length_feedback_error">Feedback cannot be blank and numbers must be greater than 50 characters</string>
    <string name="same_pass_error">Config lock pass must be the same as the lock password above</string>
    <string name="create_lock">Create Lock Password</string>
    <string name="un_lock">Unlock Password</string>
    <string name="edit_lock">Change Lock Password</string>
    <string name="finger">Fingerprint</string>
    <string name="change_pass">Change Password</string>
    <string name="lock_app">Lock App</string>
    <string name="finger_print">Fingerprint Authentication</string>
    <string name="placeYourScan">Place your finger on the fingerprint scanner.</string>
    <string name="notdelected">The device does not support fingerprint authentication.</string>
    <string name="permision">You do not have permission to use the fingerprint scanner</string>
    <string name="nothaveone">The device does not support fingerprint authentication.</string>
    <string name="shouldalllastest">You need to add at least one fingerprint to use this feature</string>
    <string name="change">Change</string>
    <string name="unlock">Unlock</string>
    <string name="create">Create</string>
    <string name="feedback">Feedback</string>
    <string name="reviews_feedback">Feedback to us your thoughts</string>
    <string name="send">Send</string>
    <string name="feedbacked">You have already feedback</string>
    <string name="create_lock_successful">Create Lock Password Successful</string>
    <string name="un_lock_successful">UnLock Password Successful</string>
    <string name="change_lock_successful">Change Lock Password Successful</string>
    <string name="change_name_successful">Change Name Successful</string>
    <string name="new_password">New Password</string>
    <string name="config_new_pass">Config New Password</string>
    <string name="curent_pass_null">Password can not be blank</string>
    <string name="config_current_pass_null">Config Password can not be blank</string>
    <string name="new_name_null">Name can not be blank</string>
    <string name="password_null">Password can not be blank</string>
    <string name="email_error">Invalid email address</string>
    <string name="cmt_null">Comment can not be blank</string>
    <string name="new_name">Your new name</string>
    <string name="str_cancel">Cancel</string>
    <string name="justnow">just now</string>
    <string name="cmt">Write your comment...</string>
    <string name="check_user">This e-mail is already taken</string>
    <string name="no_data">There are no data at the moment</string>
    <string name="cinema">Cinema</string>
    <string name="strInTheatres">In Theatres</string>
    <string name="strUpComing">Upcoming</string>
    <string name="duration_metter" formatted="false">%d m</string>
    <string name="duration_kilommetter" formatted="false">%s km</string>
    <string name="location">Location</string>
    <string name="hint_search">Where do you want to go?</string>
    <string name="route">Route</string>
    <string name="title_warning">Attention</string>
    <string name="message_not_support_gps">Your device does not support GPS</string>
    <string name="title_neet_gps">GPS is off</string>
    <string name="message_need_gps">Please enable location determination to make your experience better.</string>
    <string name="late">Not now</string>
    <string name="no_result">No matching results</string>
    <string name="booking">Booking</string>
    <string name="error_login">Incorrect account or password</string>
    <string name="no_showing">There is currently no schedule</string>
    <string name="seat">You can only set up to four seats</string>
    <string name="loading_fail">Video loading failed</string>

    <string name="replay">Replay</string>
    <string name="video_loading_failed">Loading Fail</string>
    <string name="click_to_restart">Restart</string>
    <string name="no_url">No Url</string>
    <string name="tips_not_wifi">You are currently using the mobile network, the player will continue to consume traffic</string>
    <string name="tips_not_wifi_confirm">Resume</string>
    <string name="tips_not_wifi_cancel">Stop play</string>
    <string name="double_speed">Double speed</string>
    <string name="info">About App</string>
    <string name="version_">Version:</string>
    <string name="dev_by">Developed by</string>
    <string name="dev_by_team">Developed by Outplay team</string>
    <string name="description_app_info">Movies is the application to watch movies of the hottest movies today, the application is free and very convenient</string>
    <string name="choose_image_avatar">Choose your avatar</string>
    <string name="not_avatar_image">Please, Choose your image for avatar</string>
    <string name="progress_is_loading">Loading...</string>
    <string name="theatre_film">Theatre Film</string>
    <string name="action_film">Action Film</string>
    <string name="adventure_film">Adventure Film</string>
    <string name="fiction_film">Fiction Film</string>
    <string name="tv_film">TV Series</string>
    <string name="theatre_detail_film">Experience the best new theatre films</string>
    <string name="adventure_detail_film">Experience the journey</string>
    <string name="action_detail_film">Experience the action scenes</string>
    <string name="fiction_detail_film">Experience the imagination</string>
    <string name="tv_detail_film">Experience the fascinating episodes</string>
    <string name="more">More</string>
    <string name="zero_reviews">0 Review</string>
    <string name="zero_likes">0 Like</string>
    <string name="zero">0.0</string>
    <string name="watch_free">Watching Film Free</string>
    <string name="face_book">Facebook</string>
    <string name="google">Google</string>
    <string name="slogan">Watching Film and TV series everywhere</string>
    <string name="change_your_name">Change Your Name</string>
    <string name="create_new_account">Create new an account</string>
    <string name="time">Time:</string>
    <string name="kind_two">Kind:</string>
    <string name="play_now">Play now</string>
    <string name="rat_movie">Rat movie</string>
    <string name="story_line">Storyline</string>
    <string name="cast">Cast</string>
    <string name="movie_cmt">Movie Comment</string>
    <string name="book_seat">Booking Seats</string>
    <string name="buy_ticket">Buy Tickets</string>
    <string name="seats">Seats:</string>
    <string name="born">Born:</string>
    <string name="country_two">Country:</string>
    <string name="rating">Rating</string>
    <string name="information">Information</string>
    <string name="related_film">Related film</string>
    <string name="movies">Movie</string>
    <string name="version_1">1.0.0</string>
    <string name="dev_by_ntt">Nguyen Tri The</string>
    <string name="ad">Ad</string>
    <string name="offer">Offer:</string>
    <string name="offer_">Offer</string>
    <string name="recommend">Recommend for you</string>
    <string name="zero_zero">00:00</string>
    <string name="clarity">clarity</string>
    <string name="watch">Watch Now</string>
    <string name="see_all">All Notifications</string>
    <string name="dismiss">Dismiss</string>
    <string name="wait_me_a_min">Please wait a moment ...</string>
    <string name="change_pass_success">Change Password Successful</string>
</resources>
