<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_cinama"
            android:icon="@drawable/cinema"
            android:title="@string/cinema" />
        <item
            android:id="@+id/nav_kind"
            android:icon="@drawable/ic_local_movies"
            android:title="@string/kind" />
        <item
            android:id="@+id/nav_saved"
            android:icon="@drawable/saved"
            android:title="@string/saved" />
        <item
            android:id="@+id/nav_favorite"
            android:icon="@drawable/unlove"
            android:title="@string/favorite" />
        <item
            android:id="@+id/nav_account"
            android:icon="@drawable/ic_account"
            android:title="@string/account" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/settings" />
        <item
            android:id="@+id/nav_info"
            android:icon="@drawable/ic_info_outline_black_24dp"
            android:title="@string/info" />
        <item
            android:id="@+id/nav_log_out"
            android:icon="@drawable/ic_exit"
            android:title="@string/log_out" />
    </group>

</menu>
