<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".activity.RegisterActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/got"
        android:transitionName="@string/shareName"
        tools:ignore="ContentDescription,UnusedAttribute" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@color/bg_blur"
        tools:ignore="ContentDescription" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:max="100"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="50dp"

        android:gravity="center"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:text="@string/create_new_account"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_size_35sp"
            android:textStyle="bold" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_gravity="start"
            android:layout_marginBottom="10dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/img"
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:src="@drawable/chain"
                app:civ_border_color="@android:color/white"
                app:civ_border_width="2dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_toEndOf="@id/img"
                android:gravity="center"
                android:text="@string/choose_image_avatar"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:textStyle="bold" />
        </RelativeLayout>

        <EditText
            android:id="@+id/edName"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/input"
            android:hint="@string/name"
            android:imeOptions="actionGo"
            android:inputType="text"
            android:paddingLeft="20dp"
            android:paddingRight="10dp"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/darker_gray"
            tools:ignore="Autofill,RtlHardcoded,RtlSymmetry" />

        <EditText
            android:id="@+id/edUsername"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/input"
            android:hint="@string/username"
            android:imeOptions="actionGo"
            android:inputType="textEmailAddress"
            android:paddingLeft="20dp"
            android:paddingRight="10dp"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/darker_gray"
            tools:ignore="Autofill,RtlHardcoded,RtlSymmetry" />

        <EditText
            android:id="@+id/edPassword"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/input"
            android:hint="@string/password"
            android:imeOptions="actionGo"
            android:inputType="textPassword"
            android:paddingLeft="20dp"
            android:paddingRight="10dp"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/darker_gray"
            tools:ignore="Autofill,RtlHardcoded,RtlSymmetry" />

        <EditText
            android:id="@+id/edConfigPassword"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/input"
            android:hint="@string/config_password"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:paddingLeft="20dp"
            android:paddingRight="10dp"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/darker_gray"
            tools:ignore="Autofill,RtlHardcoded,RtlSymmetry" />

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/buttonkeyboad_conner_red"
            android:text="@string/register"
            android:textAllCaps="false"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/txtLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:text="@string/haveaaccount"
            android:textColor="@android:color/white"
            android:textStyle="bold" />
    </LinearLayout>

    <ImageView
        android:id="@+id/imgBack"
        android:layout_width="30dp"
        android:layout_marginTop="@dimen/dimen_15dp"
        android:layout_marginStart="@dimen/margin_10dp"
        android:layout_height="40dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/back_ios" />
</RelativeLayout>