<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".activity.FeedbackActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="10dp"
            app:layout_scrollFlags="scroll|enterAlways|snap">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal"
                android:padding="10dp"
                tools:ignore="UselessParent">

                <ImageView
                    android:id="@+id/btnBack"
                    android:layout_width="25dp"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/todo"
                    android:src="@drawable/back_ios" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/feedback"
                    android:textColor="@android:color/white"
                    android:textColorHint="@android:color/white"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    tools:ignore="Autofill,RtlSymmetry" />
            </RelativeLayout>
        </LinearLayout>
    </android.support.design.widget.AppBarLayout>

    <EditText
        android:id="@+id/edFeedback"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/appbar"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_margin="@dimen/margin_25dp"
        android:background="@drawable/input_border"
        android:gravity="top|left"
        android:hint="@string/reviews_feedback"
        android:lines="10"
        android:maxLines="15"
        android:minLines="5"
        android:paddingLeft="10dp"
        android:paddingTop="2dp"
        android:paddingRight="10dp"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/darker_gray"
        tools:ignore="Autofill,RtlHardcoded,RtlSymmetry,TextFields" />

    <Button
        android:id="@+id/btnSend"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edFeedback"
        android:layout_marginLeft="@dimen/margin_25dp"
        android:layout_marginRight="@dimen/margin_25dp"
        android:background="@drawable/buttonkeyboad_conner"
        android:text="@string/send"
        android:textAllCaps="false"
        android:textColor="@android:color/white" />


</RelativeLayout>