<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:paddingStart="20dp"
    android:paddingEnd="20dp"
    tools:context=".fragment.SettingsFragment">

    <RelativeLayout
        android:id="@+id/ll"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:gravity="center"
            android:text="@string/notification"
            android:textColor="@android:color/white"
            android:textSize="17sp"
            tools:ignore="RelativeOverlap" />

        <Switch
            android:id="@+id/swNotification"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:layout_alignParentBottom="true"
            android:background="#B2414141" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/llLockApp"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@+id/ll">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:gravity="center"
            android:text="@string/lock_app"
            android:textColor="@android:color/white"
            android:textSize="17sp"
            tools:ignore="RelativeOverlap" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:src="@drawable/arrow_right"
            android:contentDescription="@string/todo" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:layout_alignParentBottom="true"
            android:background="#B2414141" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rlFeedback"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@+id/llLockApp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:gravity="center"
            android:text="@string/feedback"
            android:textColor="@android:color/white"
            android:textSize="17sp"
            tools:ignore="RelativeOverlap" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:src="@drawable/arrow_right"
            android:contentDescription="@string/todo" />
    </RelativeLayout>
</RelativeLayout>